HelloUltraviolet/Fixtures/RejectedSource/Parallelism/ParallelWorkgroupSize/Expected.uv
//! Expected diagnostic metadata for the ParallelWorkgroupSize rejected-source specimen.

expectedDiagnostic("E-CON-0157", "rule.20.WorkgroupSize-Err")
